src/test/deca/context/invalid/def_affect/unidentified-assign.deca
//Erreur ligne 4, pas de type.

{
    i = 1;
}